[package]
name = "rust_kameo_image_gallery"
version = "0.1.0"
authors = ["MajorX234 <majorx234@googlemail.com>"]
edition = "2024"

[lib]
name = "infra"
path = "src/lib.rs"

[[bin]]
name = "image_gallery_server"
path = "src/main.rs"

[dependencies]
axum = { version = "0.8.8", features=["ws"]}
axum-extra = { version = "0.12.5", features = ["typed-header"] }
kameo = "0.19.2"
tokio = { version = "1.49.0", features = ["full"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
tracing = "0.1.44"
tracing-subscriber = { version = "0.3.22", features = ["env-filter"] }
env_logger = "0.11.8"
serde = "1.0.228"
serde_derive = "1.0.228"
serde_json = "1.0.149"
chrono = { version = "0.4.42", features = ["serde"] }

